--- a/.github/workflows/deploy-nexus-rental.yml
+++ b/.github/workflows/deploy-nexus-rental.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Compose Images
 on:
   push:
     branches: [ master ]
-#testing automated build and push of doker compose files
+#testing automated build and push of doker compose
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
